WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83670
[BlackBerry] There shouldn't be two or more Accept-Language in platformRequest's headerList.
https://bugs.webkit.org/show_bug.cgi?id=83670
Summary
[BlackBerry] There shouldn't be two or more Accept-Language in platformReques...
Jason Liu
Reported
2012-04-11 00:04:11 PDT
We add Accept-Language to platformRequest in initializePlatformRequest. But need to make sure there aren't two or more Accecpt-Language in headerList.
Attachments
Patch
(2.96 KB, patch)
2012-04-11 00:42 PDT
,
Jason Liu
no flags
Details
Formatted Diff
Diff
Patch
(2.95 KB, patch)
2012-04-11 19:12 PDT
,
Jason Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jason Liu
Comment 1
2012-04-11 00:42:03 PDT
Created
attachment 136637
[details]
Patch
Charles Wei
Comment 2
2012-04-11 02:44:44 PDT
Comment on
attachment 136637
[details]
Patch Looks good to me. Need a reviewer to approve though.
Rob Buis
Comment 3
2012-04-11 04:22:38 PDT
Comment on
attachment 136637
[details]
Patch Looks good. But why is this called twice? Can't the state be checked before calling twice?
Jason Liu
Comment 4
2012-04-11 19:08:23 PDT
(In reply to
comment #3
)
> (From update of
attachment 136637
[details]
) > Looks good. But why is this called twice? Can't the state be checked before calling twice?
It is called to add custom headers to resourceRequest first. Accept-Language is in header list. When we create a platformRequest, it is called again.
Jason Liu
Comment 5
2012-04-11 19:12:49 PDT
Created
attachment 136807
[details]
Patch
Leo Yang
Comment 6
2012-04-11 19:34:47 PDT
Comment on
attachment 136807
[details]
Patch Since you addressed Rob's comments when he gave you r+, I cq+ your patch.
WebKit Review Bot
Comment 7
2012-04-11 20:06:39 PDT
Comment on
attachment 136807
[details]
Patch Clearing flags on attachment: 136807 Committed
r113938
: <
http://trac.webkit.org/changeset/113938
>
WebKit Review Bot
Comment 8
2012-04-11 20:06:43 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug