[BlackBerry] There shouldn't be two or more Accept-Language in platformRequest's headerList. https://bugs.webkit.org/show_bug.cgi?id=83670

FrameLoaderClientBlackBerry::dispatchWillSendRequest and NetworkManager::startJob will call
ResourceRequest::initializePlatformRequest. Accept-Language is added two times.
We should avoid the second adding to improve performance.

Patch by Jason Liu <jason.liu@torchmobile.com.cn> on 2012-04-11
Reviewed by Rob Buis.

No new tests. Refactor.

* platform/network/blackberry/ResourceRequestBlackBerry.cpp:
(WebCore::ResourceRequest::initializePlatformRequest):

Canonical link: https://commits.webkit.org/101233@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113938 268f45cc-cd09-0410-ab3c-d52691b4dbfc