Source/WebCore/platform/network/blackberry/ResourceRequestBlackBerry.cpp
@@ -212,15 +212,17 @@ void ResourceRequest::initializePlatformRequest(NetworkRequest& platformRequest,
                 platformRequest.addHeader("Cookie", cookiePairs.containsOnlyLatin1() ? cookiePairs.latin1().data() : cookiePairs.utf8().data());
         }
 
-        // Locale has the form "en-US". Construct accept language like "en-US, en;q=0.8".
-        std::string locale = BlackBerry::Platform::Client::get()->getLocale();
-        // POSIX locale has '_' instead of '-'.
-        // Replace to conform to HTTP spec.
-        size_t underscore = locale.find('_');
-        if (underscore != std::string::npos)
-            locale.replace(underscore, 1, "-");
-        std::string acceptLanguage = locale + ", " + locale.substr(0, 2) + ";q=0.8";
-        platformRequest.addHeader("Accept-Language", acceptLanguage.c_str());
+        if (!httpHeaderFields().contains("Accept-Language")) {
+            // Locale has the form "en-US". Construct accept language like "en-US, en;q=0.8".
+            std::string locale = BlackBerry::Platform::Client::get()->getLocale();
+            // POSIX locale has '_' instead of '-'.
+            // Replace to conform to HTTP spec.
+            size_t underscore = locale.find('_');
+            if (underscore != std::string::npos)
+                locale.replace(underscore, 1, "-");
+            std::string acceptLanguage = locale + ", " + locale.substr(0, 2) + ";q=0.8";
+            platformRequest.addHeader("Accept-Language", acceptLanguage.c_str());
+        }
     }
 }
 
